--- a/online-bookstore/Gemfile
+++ b/online-bookstore/Gemfile
@@ -36,9 +36,15 @@ gem 'jbuilder', '~> 2.5'
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.1.0', require: false
 
+gem 'haml'
+
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
+
+  gem 'pry', '~> 0.12.2'
+  gem 'rb-readline'
 end
 
 group :development do
