--- a/online-bookstore/Gemfile
+++ b/online-bookstore/Gemfile
@@ -39,6 +39,7 @@ gem 'jbuilder', '~> 2.5'
 gem 'bootsnap', '>= 1.1.0', require: false
 
 gem 'haml'
+gem 'haml-rails'
 
 
 group :development, :test do
@@ -46,6 +47,7 @@ group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
 
   gem 'pry', '~> 0.12.2'
+  gem 'pry-rails'
   gem 'rb-readline'
 end
 
