--- a/online-bookstore/Gemfile
+++ b/online-bookstore/Gemfile
@@ -5,6 +5,8 @@ ruby '2.4.1'
 
 
 gem 'bcrypt'
+
+gem 'will_paginate', '>= 3.1'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.2.3'
 # Use mysql as the database for Active Record
