--- a/online-bookstore/Gemfile
+++ b/online-bookstore/Gemfile
@@ -53,6 +53,8 @@ gem 'bootstrap-sass', '~> 3.2.0'
 gem "font-awesome-rails"
 gem 'autoprefixer-rails'
 
+gem 'credit_card_validations'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
